[package]
name = "electron-beam"
version = "0.1.0"
edition = "2021"
authors = ["Electron Beam CLI <beam@example.com>"]
description = "A CLI tool to create CRT-style turn-off animations from PNG images to GIF"
license = "MIT"
keywords = ["crt", "animation", "gif", "retro", "electron-beam"]
categories = ["command-line-utilities", "multimedia::images", "graphics"]

[[bin]]
name = "electron-beam"
path = "src/main.rs"

[dependencies]
# Image processing
image = { version = "0.24", features = ["png", "gif"] }
gif = "0.12"

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Math and utilities
glam = "0.25"
rand = "0.8"

# Performance
rayon = "1.8"

# Color manipulation
palette = "0.7"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
